hphp/test/slow/ext_phar/corrupt.php.expectf
#!/usr/bin/env php

Fatal error: Uncaught exception 'PharException' with message 'phar has a broken signature' in %s/phpunit-corrupt%s:%d
Stack trace:
#0 (): __SystemLib\PharArchiveHandler->parsePhar()
#1 (): __SystemLib\PharArchiveHandler->__construct()
#2 (): Phar->__construct()
#3 %s/phpunit-corrupt%s(%d): Phar::mapPhar()
#4 %s/test/slow/ext_phar/corrupt.php(16): include()
#5 {main}
